--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,14 +1,17 @@
-events {}
-
+events { }
 http {
-    upstream backend {
-        server 127.0.0.1:5000;
-        server 127.0.0.1:5001;
+    upstream app {
+        server 192.168.99.100:5000 max_fails=2 fail_timeout=10s;
+        server 192.168.99.100:5001 max_fails=2 fail_timeout=10s;
     }
+
     server {
         listen 8082;
-        location /health {
-            proxy_pass http://backend;
+        location / {
+            allow all;
+            proxy_pass http://app/;
+            proxy_read_timeout 15;
+            proxy_connect_timeout 3;
         }
     }
 }
